Fix Certifications on small devices

--- a/css/about.css
+++ b/css/about.css
@@ -48,7 +48,6 @@ footer {
   background-color: var(--column-color);
   max-width: 200px;
   text-align: center;
-  flex: 25%;
   margin: 0.5em;
   box-shadow: 0px 0px 16px -4px var(--box-shadow-color);
   border-radius: 10px;
@@ -145,26 +144,29 @@ textarea {
     max-width: 98%;
     font-size: 1.15em;
   }
+  .column-wrapper {
+    margin: -10px;
+  }
   .column {
     margin: 0;
     max-width: fit-content;
     margin-top: 10px;
+    font-size: 0.85em;
   }
   .column-text {
     height: auto !important;
-    width: 170px;
-    min-height: 200px;
+    width: 167px;
+    min-height: 170px;
     max-height: 250px;
   }
 }
 /* Small phones */
 @media screen and (max-width: 360px) {
   .column-text {
-    width: auto;
-    min-width: 100px;
-    max-width: 150px;
+    width: 157px;
+    min-height: 135px;
   }
   .column-text {
-    font-size: 0.7em;
+    font-size: 0.75em;
   }
 }
